<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/groceryCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:backgroundTint="@color/greenColour2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/groceryViewCollapsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:id="@+id/txtGroceryItemName"
                android:transitionName="itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="50"
                android:text="@string/defaultName"/>

            <TextView
                android:id="@+id/txtQuantityToBuy"
                android:transitionName="itemQuantityToBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="20"
                android:text="@string/defaultQuantity"/>

            <TextView
                android:id="@+id/txtGroceryPrice"
                android:transitionName="itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="20"
                android:text="@string/defaultPrice"/>

            <ImageView
                android:id="@+id/groceryDownArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/expandArrow"
                android:padding="5dp"
                android:src="@drawable/ic_down_arrow" />

            <ImageView
                android:id="@+id/groceryUpArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/collapseArrow"
                android:padding="5dp"
                android:src="@drawable/ic_up_arrow"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groceryViewExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/groceryViewCollapsed"
            android:visibility="gone"
            android:weightSum="100">

            <Button
                android:id="@+id/btnBuyItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnBuy"
                android:backgroundTint="@color/greenColour3"/>

            <Button
                android:id="@+id/btnEditGroceryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnEdit"
                android:backgroundTint="@color/greenColour3"/>

            <Button
                android:id="@+id/btnRemoveGroceryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnRemove"
                android:backgroundTint="@color/greenColour3"/>
        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>