...
        android:text="@string/labelName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/addItemToGroceryTitle" />

    <EditText
        android:id="@+id/inputGroceryItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
        android:inputType="text"
...
        android:text="@string/labelQuantityToBuy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputGroceryItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintQuantityToBuy"
        android:importantForAutofill="no"
        android:inputType="number"
...
        android:text="@string/labelUnits"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputGroceryItemUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUnits"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCheckGroceryFish"
        android:backgroundTint="@color/greenColour3"/>

    <Button
        android:id="@+id/btnAddGroceryItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_weight=".40"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelAddGrocery"
...
