...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenColour1">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groceryListRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/greenColour3"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGoToAddGroceryActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/contentDescAddGrocery"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/greenColour3"
...
